<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/preferences_title_weather_location">
        <SwitchPreference
            android:defaultValue="true"
            android:disableDependentsState="true"
            android:key="USE_DEVICE_LOCATION"
            android:summary="@string/preferences_summary_use_location"
            android:title="@string/preferences_title_use_location" />
        <EditTextPreference
            android:defaultValue="London"
            android:dependency="USE_DEVICE_LOCATION"
            android:key="CUSTOM_LOCATION"
            android:summary="@string/preferences_summary_custom_location"
            android:title="@string/preferences_title_custom_location" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Units">
        <ListPreference
            android:key="UNIT_SYSTEM"
            android:title="@string/preferences_title_unit_system"
            android:summary="%s"
            android:defaultValue="METRIC"
            android:entries="@array/unitSystemEntries"
            android:entryValues="@array/unitSystemValues"/>
    </PreferenceCategory>
</PreferenceScreen>